--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -55,19 +55,19 @@
                             </p>
                         </div>
                     </div>
-                <section aria-labelledby="genel-esaslar">
+<section aria-labelledby="genel-esaslar">
     <h2 id="genel-esaslar" class="text-3xl font-bold text-slate-800 mt-16 mb-6 border-b pb-4">
-        BİRİNCİ KISIM: Genel Esaslar (Madde 1-11)
+        BİRİNCİ KISIM: Genel Esaslar
     </h2>
     <section aria-labelledby="bolum1-4">
-        <h3 id="bolum1-4" class="text-2xl font-bold text-slate-700 mt-12 mb-4 border-b pb-3">Madde 1-4: Devletin "Çekirdek Ailesi" - Değiştirilemez Hükümler</h3>
+        <h3 id="bolum1-4" class="text-2xl font-bold text-slate-700 mt-12 mb-4 border-b pb-3">Devletin "Çekirdek Ailesi": Değiştirilemez Hükümler</h3>
         <p class="text-slate-600 mb-6" style="text-align: justify;">
             Anayasa'nın bu ilk dört maddesi, devletin kimliğini ve karakterini tanımlayan temel direklerdir. Bu maddeler o kadar önemlidir ki, Anayasa'nın kendisi tarafından özel bir koruma zırhına alınmışlardır. Sınavda bu bölümden en az bir soru kesin olarak gelir.
         </p>
 
         <details id="madde-1" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50" open>
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Madde 1 – Devletin Şekli
+                <span class="mr-3 text-xl">📘</span> Devletin Şekli
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                 <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
@@ -81,7 +81,7 @@
 
         <details id="madde-2" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Madde 2 – Cumhuriyetin Nitelikleri
+                <span class="mr-3 text-xl">📘</span> Cumhuriyetin Nitelikleri
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                 <div class="mb-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
@@ -107,21 +107,21 @@
 
         <details id="madde-3" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Madde 3 – Devletin Bütünlüğü, Resmî Dili, Bayrağı, Millî Marşı ve Başkenti
+                <span class="mr-3 text-xl">📘</span> Devletin Bütünlüğü ve Temel Sembolleri
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                 <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
                     Türkiye Devleti, ülkesi ve milletiyle <strong>bölünmez bir bütündür</strong>. Dili <strong>Türkçedir</strong>. Bayrağı, şekli kanununda belirtilen, <strong>beyaz ay yıldızlı al bayraktır</strong>. Millî marşı <strong>“İstiklal Marşı”dır</strong>. Başkenti <strong>Ankara’dır</strong>.
                 </blockquote>
                 <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
-                    <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu madde, devletin 5 temel kimlik unsurunu tanımlar: <strong>1)</strong> Ülke ve milletin bütünlüğü, <strong>2)</strong> Dil, <strong>3)</strong> Bayrak, <strong>4)</strong> Milli Marş, <strong>5)</strong> Başkent. Sınavda "Aşağıdakilerden hangisi Madde 3'te belirtilen unsurlardan değildir?" gibi bir soruyla karşılaşabilirsiniz. Bu beş unsuru net olarak bilmelisiniz.</p>
+                    <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu madde, devletin 5 temel kimlik unsurunu tanımlar: <strong>1)</strong> Ülke ve milletin bütünlüğü, <strong>2)</strong> Dil, <strong>3)</strong> Bayrak, <strong>4)</strong> Milli Marş, <strong>5)</strong> Başkent. Sınavda "Aşağıdakilerden hangisi Anayasa'da belirtilen devletin temel unsurlarından değildir?" gibi bir soruyla karşılaşabilirsiniz.</p>
                 </div>
             </div>
         </details>
 
         <details id="madde-4" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Madde 4 – Değiştirilemeyecek Hükümler
+                <span class="mr-3 text-xl">📘</span> Değiştirilemeyecek Hükümler
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                  <div class="mb-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
@@ -134,18 +134,18 @@
         </details>
     </section>
     <section aria-labelledby="bolum5-11">
-        <h3 id="bolum5-11" class="text-2xl font-bold text-slate-700 mt-12 mb-4 border-b pb-3">Madde 5-11: Devletin İşleyiş Felsefesi ve Hukukun Üstünlüğü</h3>
+        <h3 id="bolum5-11" class="text-2xl font-bold text-slate-700 mt-12 mb-4 border-b pb-3">Devletin İşleyiş Felsefesi ve Hukukun Üstünlüğü</h3>
         <p class="text-slate-600 mb-6" style="text-align: justify;">
             Devletin kimliğini öğrendikten sonra, şimdi de bu devletin hangi amaçlar doğrultusunda, hangi ilkelerle ve nasıl bir yetki dağılımıyla işleyeceğini inceleyeceğiz. Bu maddeler, devlet mekanizmasının çalışma prensiplerini ve hukukun herkes üzerindeki bağlayıcılığını ortaya koyar.
         </p>
 
         <details id="madde-5" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Madde 5 – Devletin Temel Amaç ve Görevleri
+                <span class="mr-3 text-xl">📘</span> Devletin Temel Amaç ve Görevleri
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                 <div class="mb-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
-                    <p style="text-align: justify;">❗ <strong>Sınav Stratejisi:</strong> Tıpkı 2. Maddedeki gibi, "Aşağıdakilerden hangisi Devletin temel amaç ve görevlerinden biri değildir?" sorusu bu maddenin de klasik testidir. Çeldiriciler genellikle Madde 2'deki Cumhuriyetin nitelikleri ile karıştırılarak verilir. Bir şeyin devletin "niteliği" olması, aynı zamanda "görevi" olduğu anlamına gelmez.</p>
+                    <p style="text-align: justify;">❗ <strong>Sınav Stratejisi:</strong> Tıpkı Cumhuriyetin niteliklerinde olduğu gibi, "Aşağıdakilerden hangisi Devletin temel amaç ve görevlerinden biri değildir?" sorusu bu maddenin de klasik testidir. Çeldiriciler genellikle Cumhuriyetin nitelikleri ile karıştırılarak verilir. Bir şeyin devletin "niteliği" olması, aynı zamanda "görevi" olduğu anlamına gelmez.</p>
                 </div>
                 <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
                     Devletin temel amaç ve görevleri, Türk milletinin bağımsızlığını ve bütünlüğünü, ülkenin bölünmezliğini, Cumhuriyeti ve demokrasiyi <strong>korumak</strong>, kişilerin ve toplumun refah, huzur ve mutluluğunu <strong>sağlamak</strong>; kişinin temel hak ve hürriyetlerini, sosyal hukuk devleti ve adalet ilkeleriyle bağdaşmayacak surette sınırlayan siyasal, ekonomik ve sosyal engelleri <strong>kaldırmaya</strong>, insanın maddî ve manevî varlığının gelişmesi için gerekli şartları <strong>hazırlamaya çalışmaktır</strong>.
@@ -158,7 +158,7 @@
 
         <details id="madde-6" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Madde 6 – Egemenlik
+                <span class="mr-3 text-xl">📘</span> Egemenlik
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                 <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
@@ -171,20 +171,20 @@
         </details>
         
         <div class="my-8">
-            <h4 class="text-center font-bold text-xl mb-4 text-slate-700">📊 Kavram Haritası: Kuvvetler Ayrılığı (Madde 7-8-9)</h4>
+            <h4 class="text-center font-bold text-xl mb-4 text-slate-700">📊 Kavram Haritası: Kuvvetler Ayrılığı İlkesi</h4>
             <div class="flex flex-col md:flex-row gap-4 text-center">
                 <div class="flex-1 p-4 bg-slate-50 border-t-4 border-blue-500 rounded-lg shadow-sm">
-                    <h5 class="font-bold text-blue-800">YASAMA (Madde 7)</h5>
+                    <h5 class="font-bold text-blue-800">YASAMA</h5>
                     <hr class="my-2 border-slate-200">
                     <p class="text-sm" style="text-align: justify;">Yasama yetkisi Türk Milleti adına <strong>Türkiye Büyük Millet Meclisinindir</strong>. Bu yetki <strong>devredilemez</strong>.</p>
                 </div>
                 <div class="flex-1 p-4 bg-slate-50 border-t-4 border-red-500 rounded-lg shadow-sm">
-                    <h5 class="font-bold text-red-800">YÜRÜTME (Madde 8)</h5>
+                    <h5 class="font-bold text-red-800">YÜRÜTME</h5>
                     <hr class="my-2 border-slate-200">
                     <p class="text-sm" style="text-align: justify;">Yürütme yetkisi ve görevi, <strong>Cumhurbaşkanı tarafından</strong>, Anayasaya ve kanunlara uygun olarak kullanılır ve yerine getirilir.</p>
                 </div>
                 <div class="flex-1 p-4 bg-slate-50 border-t-4 border-green-500 rounded-lg shadow-sm">
-                    <h5 class="font-bold text-green-800">YARGI (Madde 9)</h5>
+                    <h5 class="font-bold text-green-800">YARGI</h5>
                     <hr class="my-2 border-slate-200">
                     <p class="text-sm" style="text-align: justify;">Yargı yetkisi, Türk Milleti adına <strong>bağımsız ve tarafsız mahkemelerce</strong> kullanılır.</p>
                 </div>
@@ -194,7 +194,7 @@
 
         <details id="madde-10" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Madde 10 – Kanun Önünde Eşitlik
+                <span class="mr-3 text-xl">📘</span> Kanun Önünde Eşitlik
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                 <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
@@ -208,7 +208,7 @@
 
         <details id="madde-11" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Madde 11 – Anayasanın Bağlayıcılığı ve Üstünlüğü
+                <span class="mr-3 text-xl">📘</span> Anayasanın Bağlayıcılığı ve Üstünlüğü
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                 <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
@@ -231,29 +231,29 @@
     
     <div class="mt-16 p-6 bg-green-100 rounded-lg border-l-4 border-green-600" role="mark">
         <h4 class="font-bold text-green-800 text-xl mb-3 flex items-center">
-            <span class="mr-3 text-2xl">✅</span> BİRİNCİ KISIM: Genel Esaslar - Bölüm Özeti
+            <span class="mr-3 text-2xl">✅</span> Genel Esaslar - Bölüm Özeti
         </h4>
         <p class="text-green-900 mb-4" style="text-align: justify;">
             Bu bölümde devletin temel DNA'sını ve anayasal sistemin iskeletini öğrendik. İşte unutmamanız gerekenler:
         </p>
         <ul class="list-disc pl-5 mt-2 text-green-900 space-y-2">
             <li>
-                <strong>Devletin Çekirdek Kimliği (Madde 1-4):</strong> Devletin şekli <strong>Cumhuriyet'tir</strong>. "İLAHİD-S" olarak kodladığımız 7 temel niteliği vardır. Ülke bütünlüğü, dil, bayrak, marş ve başkentten oluşan 5 sembolü bulunur. Ve en önemlisi, bu ilk üç madde <strong>değiştirilemez, değiştirilmesi teklif dahi edilemez</strong>.
+                <strong>Devletin Çekirdek Kimliği:</strong> Devletin şekli <strong>Cumhuriyet'tir</strong>. "İLAHİD-S" olarak kodladığımız 7 temel niteliği vardır. Ülke bütünlüğü, dil, bayrak, marş ve başkentten oluşan 5 sembolü bulunur. Ve en önemlisi, bu ilk üç madde <strong>değiştirilemez, değiştirilmesi teklif dahi edilemez</strong>.
             </li>
             <li>
-                <strong>Devletin Görevleri (Madde 5):</strong> Devletin 4 temel görevi vardır: <strong>KORU, SAĞLA, KALDIR, HAZIRLA</strong>.
+                <strong>Devletin Görevleri:</strong> Devletin 4 temel görevi vardır: <strong>KORU, SAĞLA, KALDIR, HAZIRLA</strong>.
             </li>
             <li>
-                <strong>Egemenlik (Madde 6):</strong> Egemenlik kayıtsız şartsız <strong>Milletindir</strong> ve bu egemenlik Anayasa'nın yetki verdiği <strong>organlar</strong> (Yasama, Yürütme, Yargı) eliyle kullanılır.
+                <strong>Egemenlik:</strong> Egemenlik kayıtsız şartsız <strong>Milletindir</strong> ve bu egemenlik Anayasa'nın yetki verdiği <strong>organlar</strong> (Yasama, Yürütme, Yargı) eliyle kullanılır.
             </li>
             <li>
-                <strong>Kuvvetler Ayrılığı (Madde 7-9):</strong> <strong>Yasama</strong> yetkisi devredilemez şekilde TBMM'ye, <strong>Yürütme</strong> görevi Anayasa ve kanunlara uygun olarak Cumhurbaşkanı'na, <strong>Yargı</strong> yetkisi ise bağımsız ve tarafsız mahkemelere aittir.
+                <strong>Kuvvetler Ayrılığı:</strong> <strong>Yasama</strong> yetkisi devredilemez şekilde TBMM'ye, <strong>Yürütme</strong> görevi Anayasa ve kanunlara uygun olarak Cumhurbaşkanı'na, <strong>Yargı</strong> yetkisi ise bağımsız ve tarafsız mahkemelere aittir.
             </li>
             <li>
-                <strong>Eşitlik (Madde 10):</strong> Herkes kanun önünde eşittir ve kimseye imtiyaz tanınamaz. Dezavantajlı gruplar için alınan tedbirler (<strong>pozitif ayrımcılık</strong>) bu ilkeye aykırı sayılmaz.
+                <strong>Eşitlik:</strong> Herkes kanun önünde eşittir ve kimseye imtiyaz tanınamaz. Dezavantajlı gruplar için alınan tedbirler (<strong>pozitif ayrımcılık</strong>) bu ilkeye aykırı sayılmaz.
             </li>
             <li>
-                <strong>Anayasanın Üstünlüğü (Madde 11):</strong> Hukuk kuralları arasında bir hiyerarşi (<strong>Normlar Hiyerarşisi</strong>) vardır ve en tepede Anayasa bulunur. Hiçbir kanun veya işlem Anayasa'ya aykırı olamaz.
+                <strong>Anayasanın Üstünlüğü:</strong> Hukuk kuralları arasında bir hiyerarşi (<strong>Normlar Hiyerarşisi</strong>) vardır ve en tepede Anayasa bulunur. Hiçbir kanun veya işlem Anayasa'ya aykırı olamaz.
             </li>
         </ul>
     </div>
@@ -267,7 +267,7 @@
                 <strong>1. Soru (Boşluk Doldurma):</strong> Yasama yetkisi Türk Milleti adına Türkiye Büyük Millet Meclisinindir. Bu yetki ..................... .
             </div>
             <div class="p-4 bg-white/70 rounded-md border border-sky-200">
-                <strong>2. Soru (Çoktan Seçmeli):</strong> Aşağıdakilerden hangisi Anayasanın 2. maddesinde sayılan Cumhuriyetin niteliklerinden biri <strong>değildir</strong>?
+                <strong>2. Soru (Çoktan Seçmeli):</strong> Aşağıdakilerden hangisi Anayasa'da sayılan Cumhuriyetin niteliklerinden biri <strong>değildir</strong>?
                 <br>
                 a) İnsan haklarına saygılı devlet
                 <br>
@@ -278,29 +278,29 @@
                 d) Sosyal devlet
             </div>
             <div class="p-4 bg-white/70 rounded-md border border-sky-200">
-                <strong>3. Soru (Kavram):</strong> Anayasa'nın 10. maddesi uyarınca, devletin engelliler ve yaşlılar gibi gruplara yönelik ek koruyucu tedbirler alması hangi ilke kapsamında değerlendirilir?
+                <strong>3. Soru (Kavram):</strong> Devletin, engelliler ve yaşlılar gibi gruplara yönelik ek koruyucu tedbirler almasının eşitlik ilkesine aykırı sayılmaması, hangi anayasal kavramı ifade eder?
             </div>
             <div class="p-4 bg-white/70 rounded-md border border-sky-200">
-                <strong>4. Soru (Doğru/Yanlış):</strong> Anayasanın 4. maddesine göre, ilk üç madde değiştirilemez ancak değiştirilmesi için kanun teklifi verilebilir. (<strong>D / Y</strong>)
+                <strong>4. Soru (Doğru/Yanlış):</strong> Anayasanın ilk üç maddesi değiştirilemez ancak değiştirilmesi için kanun teklifi verilebilir. (<strong>D / Y</strong>)
             </div>
             <div class="p-4 bg-white/70 rounded-md border border-sky-200">
-                <strong>5. Soru (Analiz):</strong> Normlar Hiyerarşisi ilkesi (Madde 11), Kuvvetler Ayrılığı ilkesini (Madde 7-8-9) nasıl etkiler? Kısaca açıklayınız.
+                <strong>5. Soru (Analiz):</strong> Anayasanın üstünlüğü ve normlar hiyerarşisi ilkesi, kuvvetler ayrılığı ilkesini nasıl etkiler? Kısaca açıklayınız.
             </div>
         </div>
         <details class="mt-6">
             <summary class="font-semibold text-sm text-sky-700 cursor-pointer hover:underline">Cevap Anahtarını Göster</summary>
             <div class="mt-2 p-4 bg-white rounded-md border text-sm space-y-3">
                 <p>
-                    <strong>1. Cevap:</strong> <strong>devredilemez</strong>. (Madde 7)
+                    <strong>1. Cevap:</strong> <strong>devredilemez</strong>.
                 </p>
                 <p>
-                    <strong>2. Cevap:</strong> <strong>c) Üniter devlet</strong>. Üniter devlet yapısı Anayasa'nın genel ruhundan ve 3. maddedeki "bölünmez bütünlük" ilkesinden çıksa da, 2. maddede açıkça sayılan bir nitelik değildir. Diğer şıklar doğrudan 2. maddede yer alır.
+                    <strong>2. Cevap:</strong> <strong>c) Üniter devlet</strong>. Üniter devlet yapısı Anayasa'nın genel ruhundan ve "bölünmez bütünlük" ilkesinden çıksa da, Cumhuriyetin nitelikleri arasında açıkça sayılan bir ifade değildir.
                 </p>
                 <p>
-                    <strong>3. Cevap:</strong> <strong>Pozitif Ayrımcılık</strong>. (Madde 10)
+                    <strong>3. Cevap:</strong> <strong>Pozitif Ayrımcılık</strong>.
                 </p>
                 <p>
-                    <strong>4. Cevap:</strong> <strong>Yanlış</strong>. Madde 4, bu hükümlerin değiştirilemeyeceğini ve <strong>değiştirilmesinin teklif dahi edilemeyeceğini</strong> açıkça belirtir.
+                    <strong>4. Cevap:</strong> <strong>Yanlış</strong>. Anayasa, bu hükümlerin değiştirilmesinin <strong>teklif dahi edilemeyeceğini</strong> açıkça belirtir.
                 </p>
                 <p>
                     <strong>5. Cevap:</strong> Normlar Hiyerarşisi, kuvvetler ayrılığı ilkesiyle ayrılan tüm yetkilerin (Yasama, Yürütme, Yargı) üzerinde bir denetim mekanizması kurar. Yani, yasama organı (TBMM) kanun yaparken, yürütme organı (CB) görevini yerine getirirken ve yargı organları (Mahkemeler) karar verirken, hepsi en üst norm olan <strong>Anayasa'ya uymak zorundadır</strong>. Bu durum, yetkilerin keyfi kullanılmasını önler ve "hukuk devleti" ilkesini güvence altına alır.
