--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -67,7 +67,7 @@
 
         <details id="madde-1" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50" open>
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Devletin Şekli
+                <span class="mr-3 text-xl">📘</span> Madde 1 – Devletin Şekli
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                 <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
@@ -81,7 +81,7 @@
 
         <details id="madde-2" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Cumhuriyetin Nitelikleri
+                <span class="mr-3 text-xl">📘</span> Madde 2 – Cumhuriyetin Nitelikleri
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                 <div class="mb-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
@@ -107,21 +107,28 @@
 
         <details id="madde-3" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Devletin Bütünlüğü ve Temel Sembolleri
+                <span class="mr-3 text-xl">📘</span> Madde 3 – Devletin Bütünlüğü ve Temel Sembolleri
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                 <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
                     Türkiye Devleti, ülkesi ve milletiyle <strong>bölünmez bir bütündür</strong>. Dili <strong>Türkçedir</strong>. Bayrağı, şekli kanununda belirtilen, <strong>beyaz ay yıldızlı al bayraktır</strong>. Millî marşı <strong>“İstiklal Marşı”dır</strong>. Başkenti <strong>Ankara’dır</strong>.
                 </blockquote>
                 <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
-                    <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu madde, devletin 5 temel kimlik unsurunu tanımlar: <strong>1)</strong> Ülke ve milletin bütünlüğü, <strong>2)</strong> Dil, <strong>3)</strong> Bayrak, <strong>4)</strong> Milli Marş, <strong>5)</strong> Başkent. Sınavda "Aşağıdakilerden hangisi Anayasa'da belirtilen devletin temel unsurlarından değildir?" gibi bir soruyla karşılaşabilirsiniz.</p>
+                     <p style="text-align: justify;" class="mb-2"><strong>🧠 Hoca Yorumu:</strong> Bu madde, devletin adeta "nüfus cüzdanını" oluşturan 5 temel kimlik unsurunu ortaya koyar. Sınavda bu beşliyi size mutlaka soracaklardır:</p>
+                     <ul class="list-none space-y-2">
+                        <li class="flex items-start"><span class="mr-2">🏛️</span><div><strong>Bütünlük:</strong> Devletin, ülkesi ve milletiyle bölünmez bir bütün olması.</div></li>
+                        <li class="flex items-start"><span class="mr-2">🗣️</span><div><strong>Dil:</strong> Resmî dilin Türkçe olması.</div></li>
+                        <li class="flex items-start"><span class="mr-2">🇹🇷</span><div><strong>Bayrak:</strong> Beyaz ay yıldızlı al bayrak.</div></li>
+                        <li class="flex items-start"><span class="mr-2">🎶</span><div><strong>Millî Marş:</strong> İstiklal Marşı.</div></li>
+                        <li class="flex items-start"><span class="mr-2">📍</span><div><strong>Başkent:</strong> Ankara.</div></li>
+                     </ul>
                 </div>
             </div>
         </details>
 
         <details id="madde-4" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Değiştirilemeyecek Hükümler
+                <span class="mr-3 text-xl">📘</span> Madde 4 – Değiştirilemeyecek Hükümler
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                  <div class="mb-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
@@ -141,7 +148,7 @@
 
         <details id="madde-5" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Devletin Temel Amaç ve Görevleri
+                <span class="mr-3 text-xl">📘</span> Madde 5 – Devletin Temel Amaç ve Görevleri
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                 <div class="mb-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
@@ -158,7 +165,7 @@
 
         <details id="madde-6" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Egemenlik
+                <span class="mr-3 text-xl">📘</span> Madde 6 – Egemenlik
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                 <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
@@ -194,7 +201,7 @@
 
         <details id="madde-10" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Kanun Önünde Eşitlik
+                <span class="mr-3 text-xl">📘</span> Madde 10 – Kanun Önünde Eşitlik
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                 <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
@@ -208,7 +215,7 @@
 
         <details id="madde-11" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
             <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
-                <span class="mr-3 text-xl">📘</span> Anayasanın Bağlayıcılığı ve Üstünlüğü
+                <span class="mr-3 text-xl">📘</span> Madde 11 – Anayasanın Bağlayıcılığı ve Üstünlüğü
             </summary>
             <div class="px-4 pb-4 mt-2 border-t pt-4">
                 <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
