--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -172,9 +172,25 @@
                     Egemenlik, <strong>kayıtsız şartsız Milletindir</strong>. Türk Milleti, egemenliğini, Anayasanın koyduğu esaslara göre, <strong>yetkili organları</strong> eliyle kullanır. Egemenliğin kullanılması, hiçbir surette hiçbir kişiye, zümreye veya sınıfa bırakılamaz. Hiçbir kimse veya organ <strong>kaynağını Anayasadan almayan</strong> bir Devlet yetkisi kullanamaz.
                 </blockquote>
                  <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
-                    <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Bu madde, modern devletin temelidir. İki kritik noktası vardır: 1) Egemenliğin sahibi Millettir. 2) Millet bu hakkı doğrudan değil, Anayasa'nın belirlediği "yetkili organlar" (Yasama, Yürütme, Yargı) aracılığıyla kullanır. Bu, "temsili demokrasi" ve "kuvvetler ayrılığı" ilkelerinin anayasal temelidir.</p>
-                </div>
+    <p style="text-align: justify;" class="mb-3"><strong>🧠 Hoca Yorumu:</strong> Bu madde, devletin sahiplik belgesidir; gücün kaynağını ve nasıl kullanılacağını belirleyen en temel kuraldır. Sınavda bu maddenin iki temel direğini bilmeniz gerekir:</p>
+    <ul class="list-none space-y-3">
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-teal-700">👥</span>
+            <div>
+                <strong>Gücün Tek Sahibi:</strong> Egemenlik, hiçbir istisnası veya şartı olmaksızın doğrudan <strong>Millete</strong> aittir.
             </div>
+        </li>
+        <li class="flex items-start">
+            <span class="mr-3 mt-1 text-teal-700">⚙️</span>
+            <div>
+                <strong>Gücün Kullanım Yöntemi:</strong> Millet, bu egemenliği tek başına değil, kendisi adına hareket etmesi için yetkilendirdiği <strong>üç organ (Yasama, Yürütme ve Yargı)</strong> aracılığıyla kullanır.
+            </div>
+        </li>
+    </ul>
+    <p style="text-align: justify;" class="mt-3 pt-3 border-t border-teal-200 text-sm">
+        Bu yapı, modern <strong>temsili demokrasi</strong> ve <strong>kuvvetler ayrılığı</strong> ilkelerinin anayasal temelini oluşturur.
+    </p>
+</div>
         </details>
         
         <div class="my-8">
