--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -237,18 +237,51 @@
                 <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
                     Anayasa hükümleri, yasama, yürütme ve yargı organlarını, idare makamlarını ve diğer kuruluş ve kişileri <strong>bağlayan temel hukuk kurallarıdır</strong>. <strong>Kanunlar Anayasaya aykırı olamaz</strong>.
                 </blockquote>
-                <div class="mt-4 p-4 bg-sky-50 border-l-4 border-sky-400 rounded">
-                     <h5 class="font-bold mb-2 text-sky-900">📊 Kavram Haritası: Normlar Hiyerarşisi</h5>
-                    <p class="text-sm mb-2 text-sky-800" style="text-align: justify;">Bu madde, hukuk kuralları arasındaki altlık-üstlük ilişkisini tanımlar. En tepede her zaman Anayasa vardır. Hiçbir hukuk kuralı Anayasa'ya aykırı olamaz.</p>
-                    <ol class="list-decimal list-inside space-y-1 text-slate-700 font-medium">
-                        <li>Anayasa (En Üstün)</li>
-                        <li>Kanun / Milletlerarası Antlaşmalar</li>
-                        <li>Cumhurbaşkanlığı Kararnamesi</li>
-                        <li>Yönetmelik</li>
-                        <li>(Adsız Düzenleyici İşlemler: Genelge, Yönerge vb.)</li>
-                    </ol>
-                </div>
+               <div class="mt-4 p-4 bg-sky-50 border-l-4 border-sky-400 rounded">
+    <h5 class="font-bold mb-2 text-sky-900 flex items-center">
+        <span class="text-xl mr-2">📊</span> Kavram Haritası: Normlar Hiyerarşisi (Hukukun Piramidi)
+    </h5>
+    <p class="text-sm mb-4 text-sky-800" style="text-align: justify;">
+        Bu yapıyı, temeli en geniş ve zirvesi tek bir taştan oluşan bir piramit gibi düşünebilirsiniz. Alttaki bir norm, asla kendi üzerindeki bir norma aykırı hükümler içeremez. En tepede her zaman Anayasa vardır.
+    </p>
+    <div class="space-y-3 text-slate-800">
+        <div class="flex items-start">
+            <div class="flex-shrink-0 w-12 text-center"><span class="text-2xl">👑</span><div class="text-xs font-bold text-sky-700">ZİRVE</div></div>
+            <div class="ml-3">
+                <h6 class="font-bold">1. ANAYASA</h6>
+                [cite_start]<p class="text-sm" style="text-align: justify;">Devletin temel yapısını, organlarını ve temel hakları belirleyen, herkesi bağlayan ana yasa. [cite: 69] [cite_start]Hiçbir kanun ona aykırı olamaz. [cite: 70]</p>
             </div>
+        </div>
+        <div class="flex items-start">
+            <div class="flex-shrink-0 w-12 text-center"><span class="text-2xl">⚖️</span></div>
+            <div class="ml-3">
+                <h6 class="font-bold">2. KANUN / ULUSLARARASI ANTLAŞMALAR</h6>
+                <p class="text-sm" style="text-align: justify;">TBMM tarafından çıkarılan soyut, genel ve sürekli hukuk kurallarıdır. [cite_start]Temel haklarla ilgili usulüne uygun yürürlüğe konmuş uluslararası antlaşmalar, kanunlarla çelişirse <strong>antlaşma hükümleri esas alınır</strong>. [cite: 663]</p>
+            </div>
+        </div>
+        <div class="flex items-start">
+            <div class="flex-shrink-0 w-12 text-center"><span class="text-2xl">✍️</span></div>
+            <div class="ml-3">
+                <h6 class="font-bold">3. CUMHURBAŞKANLIĞI KARARNAMESİ</h6>
+                [cite_start]<p class="text-sm" style="text-align: justify;">Cumhurbaşkanı tarafından yürütme yetkisine ilişkin konularda çıkarılır. [cite: 765] [cite_start]Kanunlara aykırı olamaz. [cite: 768]</p>
+            </div>
+        </div>
+        <div class="flex items-start">
+            <div class="flex-shrink-0 w-12 text-center"><span class="text-2xl">📄</span></div>
+            <div class="ml-3">
+                <h6 class="font-bold">4. YÖNETMELİK</h6>
+                [cite_start]<p class="text-sm" style="text-align: justify;">Cumhurbaşkanı, bakanlıklar ve kamu tüzel kişileri tarafından, kanunların ve kararnamelerin uygulanmasını göstermek amacıyla çıkarılır. [cite: 906]</p>
+            </div>
+        </div>
+        <div class="flex items-start">
+            <div class="flex-shrink-0 w-12 text-center"><span class="text-2xl">📋</span><div class="text-xs font-bold text-sky-700">TEMEL</div></div>
+            <div class="ml-3">
+                <h6 class="font-bold">5. ADSıZ DÜZENLEYİCİ İŞLEMLER</h6>
+                <p class="text-sm" style="text-align: justify;">Hiyerarşinin en altında yer alan Genelge, Yönerge, Tebliğ gibi daha çok idari işleyişi ve uygulamadaki detayları düzenleyen işlemlerdir.</p>
+            </div>
+        </div>
+    </div>
+</div>
         </details>
     </section>
     
