--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -344,25 +344,49 @@
             </div>
         </div>
         <details class="mt-6">
-            <summary class="font-semibold text-sm text-sky-700 cursor-pointer hover:underline">Cevap Anahtarını Göster</summary>
-            <div class="mt-2 p-4 bg-white rounded-md border text-sm space-y-3">
-                <p>
-                    <strong>1. Cevap:</strong> <strong>devredilemez</strong>.
-                </p>
-                <p>
-                    <strong>2. Cevap:</strong> <strong>c) Üniter devlet</strong>. Üniter devlet yapısı Anayasa'nın genel ruhundan ve "bölünmez bütünlük" ilkesinden çıksa da, Cumhuriyetin nitelikleri arasında açıkça sayılan bir ifade değildir.
-                </p>
-                <p>
-                    <strong>3. Cevap:</strong> <strong>Pozitif Ayrımcılık</strong>.
-                </p>
-                <p>
-                    <strong>4. Cevap:</strong> <strong>Yanlış</strong>. Anayasa, bu hükümlerin değiştirilmesinin <strong>teklif dahi edilemeyeceğini</strong> açıkça belirtir.
-                </p>
-                <p>
-                    <strong>5. Cevap:</strong> Normlar Hiyerarşisi, kuvvetler ayrılığı ilkesiyle ayrılan tüm yetkilerin (Yasama, Yürütme, Yargı) üzerinde bir denetim mekanizması kurar. Yani, yasama organı (TBMM) kanun yaparken, yürütme organı (CB) görevini yerine getirirken ve yargı organları (Mahkemeler) karar verirken, hepsi en üst norm olan <strong>Anayasa'ya uymak zorundadır</strong>. Bu durum, yetkilerin keyfi kullanılmasını önler ve "hukuk devleti" ilkesini güvence altına alır.
-                </p>
+    <summary class="font-semibold text-sm text-sky-700 cursor-pointer hover:underline">Cevap Anahtarını Göster</summary>
+    
+    <div class="mt-3 p-4 md:p-6 bg-slate-50 rounded-lg border border-slate-200">
+        <div class="divide-y divide-slate-200">
+            
+            <div class="py-4 flex items-start">
+                <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">1</div>
+                <div class="ml-4">
+                    <p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>devredilemez</strong>.</p>
+                </div>
             </div>
-        </details>
+
+            <div class="py-4 flex items-start">
+                <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">2</div>
+                <div class="ml-4">
+                    <p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>c) Üniter devlet</strong>. Üniter devlet yapısı Anayasa'nın genel ruhundan ve "bölünmez bütünlük" ilkesinden çıksa da, Cumhuriyetin nitelikleri arasında açıkça sayılan bir ifade değildir.</p>
+                </div>
+            </div>
+
+            <div class="py-4 flex items-start">
+                <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">3</div>
+                <div class="ml-4">
+                    <p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>Pozitif Ayrımcılık</strong>.</p>
+                </div>
+            </div>
+
+            <div class="py-4 flex items-start">
+                <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">4</div>
+                <div class="ml-4">
+                    <p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> <strong>Yanlış</strong>. Anayasa, bu hükümlerin değiştirilmesinin <strong>teklif dahi edilemeyeceğini</strong> açıkça belirtir.</p>
+                </div>
+            </div>
+
+            <div class="py-4 flex items-start">
+                <div class="flex-shrink-0 w-8 h-8 bg-sky-100 text-sky-800 rounded-full flex items-center justify-center font-bold text-sm ring-1 ring-sky-200">5</div>
+                <div class="ml-4">
+                    <p class="text-slate-700" style="text-align: justify;"><strong>Cevap:</strong> Normlar Hiyerarşisi, kuvvetler ayrılığı ilkesiyle ayrılan tüm yetkilerin (Yasama, Yürütme, Yargı) üzerinde bir denetim mekanizması kurar. Yani, yasama organı (TBMM) kanun yaparken, yürütme organı (CB) görevini yerine getirirken ve yargı organları (Mahkemeler) karar verirken, hepsi en üst norm olan <strong>Anayasa'ya uymak zorundadır</strong>. Bu durum, yetkilerin keyfi kullanılmasını önler ve "hukuk devleti" ilkesini güvence altına alır.</p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    </details>
     </div>
 </section>
             </article>
