--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -249,28 +249,28 @@
             <div class="flex-shrink-0 w-12 text-center"><span class="text-2xl">👑</span><div class="text-xs font-bold text-sky-700">ZİRVE</div></div>
             <div class="ml-3">
                 <h6 class="font-bold">1. ANAYASA</h6>
-                [cite_start]<p class="text-sm" style="text-align: justify;">Devletin temel yapısını, organlarını ve temel hakları belirleyen, herkesi bağlayan ana yasa. [cite: 69] [cite_start]Hiçbir kanun ona aykırı olamaz. [cite: 70]</p>
+                <p class="text-sm" style="text-align: justify;">Devletin temel yapısını, organlarını ve temel hakları belirleyen, herkesi bağlayan ana yasa. Hiçbir kanun ona aykırı olamaz.</p>
             </div>
         </div>
         <div class="flex items-start">
             <div class="flex-shrink-0 w-12 text-center"><span class="text-2xl">⚖️</span></div>
             <div class="ml-3">
                 <h6 class="font-bold">2. KANUN / ULUSLARARASI ANTLAŞMALAR</h6>
-                <p class="text-sm" style="text-align: justify;">TBMM tarafından çıkarılan soyut, genel ve sürekli hukuk kurallarıdır. [cite_start]Temel haklarla ilgili usulüne uygun yürürlüğe konmuş uluslararası antlaşmalar, kanunlarla çelişirse <strong>antlaşma hükümleri esas alınır</strong>. [cite: 663]</p>
+                <p class="text-sm" style="text-align: justify;">TBMM tarafından çıkarılan soyut, genel ve sürekli hukuk kurallarıdır. Temel haklarla ilgili usulüne uygun yürürlüğe konmuş uluslararası antlaşmalar, kanunlarla çelişirse <strong>antlaşma hükümleri esas alınır</strong>.</p>
             </div>
         </div>
         <div class="flex items-start">
             <div class="flex-shrink-0 w-12 text-center"><span class="text-2xl">✍️</span></div>
             <div class="ml-3">
                 <h6 class="font-bold">3. CUMHURBAŞKANLIĞI KARARNAMESİ</h6>
-                [cite_start]<p class="text-sm" style="text-align: justify;">Cumhurbaşkanı tarafından yürütme yetkisine ilişkin konularda çıkarılır. [cite: 765] [cite_start]Kanunlara aykırı olamaz. [cite: 768]</p>
+                <p class="text-sm" style="text-align: justify;">Cumhurbaşkanı tarafından yürütme yetkisine ilişkin konularda çıkarılır. Kanunlara aykırı olamaz.</p>
             </div>
         </div>
         <div class="flex items-start">
             <div class="flex-shrink-0 w-12 text-center"><span class="text-2xl">📄</span></div>
             <div class="ml-3">
                 <h6 class="font-bold">4. YÖNETMELİK</h6>
-                [cite_start]<p class="text-sm" style="text-align: justify;">Cumhurbaşkanı, bakanlıklar ve kamu tüzel kişileri tarafından, kanunların ve kararnamelerin uygulanmasını göstermek amacıyla çıkarılır. [cite: 906]</p>
+                <p class="text-sm" style="text-align: justify;">Cumhurbaşkanı, bakanlıklar ve kamu tüzel kişileri tarafından, kanunların ve kararnamelerin uygulanmasını göstermek amacıyla çıkarılır.</p>
             </div>
         </div>
         <div class="flex items-start">
