--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -276,7 +276,7 @@
         <div class="flex items-start">
             <div class="flex-shrink-0 w-12 text-center"><span class="text-2xl">📋</span><div class="text-xs font-bold text-sky-700">TEMEL</div></div>
             <div class="ml-3">
-                <h6 class="font-bold">5. ADSıZ DÜZENLEYİCİ İŞLEMLER</h6>
+                <h6 class="font-bold">5. ADSIZ DÜZENLEYİCİ İŞLEMLER</h6>
                 <p class="text-sm" style="text-align: justify;">Hiyerarşinin en altında yer alan Genelge, Yönerge, Tebliğ gibi daha çok idari işleyişi ve uygulamadaki detayları düzenleyen işlemlerdir.</p>
             </div>
         </div>
