--- a/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
+++ b/konu-anlatimlari/ortak-konular/01-tc-anayasasi.html
@@ -582,6 +582,63 @@
         </details>
     </section>
 </section>  
+                <section aria-labelledby="bolum-kisinin-haklari-2">
+    <h4 class="text-xl font-bold text-slate-600 mt-12 mb-4 border-b pb-3">Özel Hayatın Gizliliği ve Korunması</h4>
+
+    <details id="madde-20" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 20 – Özel Hayatın Gizliliği
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, özel hayatına ve aile hayatına saygı gösterilmesini isteme hakkına sahiptir. Özel hayatın ve aile hayatının gizliliğine dokunulamaz.<br><br>
+                Millî güvenlik, kamu düzeni, suç işlenmesinin önlenmesi, genel sağlık ve genel ahlâkın korunması veya başkalarının hak ve özgürlüklerinin korunması sebeplerinden biri veya birkaçına bağlı olarak, usulüne göre verilmiş <strong>hâkim kararı olmadıkça</strong>; yine bu sebeplere bağlı olarak gecikmesinde sakınca bulunan hallerde de kanunla yetkili kılınmış merciin <strong>yazılı emri bulunmadıkça</strong>; kimsenin üstü, özel kâğıtları ve eşyası aranamaz ve bunlara el konulamaz. Yetkili merciin kararı <strong>yirmidört saat içinde</strong> görevli hâkimin onayına sunulur. Hâkim, kararını el koymadan itibaren <strong>kırksekiz saat içinde</strong> açıklar; aksi halde, el koyma kendiliğinden kalkar.<br><br>
+                Herkes, kendisiyle ilgili kişisel verilerin korunmasını isteme hakkına sahiptir.
+            </blockquote>
+            <div class="mt-4 p-4 bg-amber-50 border-l-4 border-amber-500 text-amber-800 rounded-md">
+                <h6 class="font-bold mb-2 flex items-center"><span class="text-xl mr-2">❗</span>Sınav Stratejisi: Arama ve El Koymada "24/48 Kuralı"</h6>
+                <p style="text-align: justify;" class="text-sm mb-3">Bu ve sonraki iki maddedeki en önemli sınav sorusu bu kuraldan gelir:</p>
+                <ul class="list-none space-y-2 text-sm">
+                    <li class="flex items-start"><span class="mr-2"><strong>1. Ana Kural:</strong></span><div>Arama ve el koyma için <strong>HÂKİM KARARI</strong> şarttır.</div></li>
+                    <li class="flex items-start"><span class="mr-2"><strong>2. İstisna:</strong></span><div>Gecikmesinde sakınca varsa, kanunla yetkilendirilmiş merciin (Örn: Kolluk Amiri) <strong>YAZILI EMRİ</strong> yeterlidir.</div></li>
+                    <li class="flex items-start"><span class="mr-2"><strong>3. Denetim:</strong></span><div>Bu yazılı emir, <strong>24 SAAT İÇİNDE</strong> görevli hâkimin onayına sunulmak zorundadır.</div></li>
+                    <li class="flex items-start"><span class="mr-2"><strong>4. Sonuç:</strong></span><div>Hâkim, <strong>48 SAAT İÇİNDE</strong> kararını açıklamazsa, el koyma kararı kendiliğinden kalkar.</div></li>
+                </ul>
+            </div>
+        </div>
+    </details>
+
+    <details id="madde-21" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 21 – Konut Dokunulmazlığı
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Kimsenin konutuna dokunulamaz. Millî güvenlik, kamu düzeni, suç işlenmesinin önlenmesi, genel sağlık ve genel ahlâkın korunması veya başkalarının hak ve özgürlüklerinin korunması sebeplerinden biri veya birkaçına bağlı olarak usulüne göre verilmiş <strong>hâkim kararı olmadıkça</strong>; yine bu sebeplere bağlı olarak gecikmesinde sakınca bulunan hallerde de kanunla yetkili kılınmış merciin <strong>yazılı emri bulunmadıkça</strong>; kimsenin konutuna girilemez, arama yapılamaz ve buradaki eşyaya el konulamaz. Yetkili merciin kararı <strong>yirmidört saat içinde</strong> görevli hâkimin onayına sunulur. Hâkim, kararını el koymadan itibaren <strong>kırksekiz saat içinde</strong> açıklar; aksi halde, el koyma kendiliğinden kalkar.
+            </blockquote>
+            <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu:</strong> Dikkat! Bu maddedeki usul, bir önceki maddedeki (Özel Hayatın Gizliliği) arama ve el koyma usulü ile **birebir aynıdır.** Yani, meşhur **24/48 saat kuralı** burada da geçerlidir. Birini öğrenen, diğerini de ezberlemiş olur. Sınavda konut dokunulmazlığı için de, özel hayatın gizliliği için de aynı usul kurallarını arayın.</p>
+            </div>
+        </div>
+    </details>
+
+    <details id="madde-22" class="my-4 border rounded-lg transition-all duration-300 hover:bg-slate-50">
+        <summary class="p-4 font-semibold text-lg flex items-center cursor-pointer text-slate-800">
+            <span class="mr-3 text-xl">📘</span> Madde 22 – Haberleşme Hürriyeti
+        </summary>
+        <div class="px-4 pb-4 mt-2 border-t pt-4">
+            <blockquote class="text-slate-700 bg-slate-50 p-4 rounded-md border-l-4 border-slate-300" style="text-align: justify;">
+                Herkes, haberleşme hürriyetine sahiptir. Haberleşmenin gizliliği esastır.<br><br>
+                Millî güvenlik, kamu düzeni, suç işlenmesinin önlenmesi, genel sağlık ve genel ahlâkın korunması veya başkalarının hak ve özgürlüklerinin korunması sebeplerinden biri veya birkaçına bağlı olarak usulüne göre verilmiş <strong>hâkim kararı olmadıkça</strong>; yine bu sebeplere bağlı olarak gecikmesinde sakınca bulunan hallerde de kanunla yetkili kılınmış merciin <strong>yazılı emri bulunmadıkça</strong>; haberleşme engellenemez ve gizliliğine dokunulamaz. Yetkili merciin kararı <strong>yirmidört saat içinde</strong> görevli hâkimin onayına sunulur. Hâkim, kararını <strong>kırksekiz saat içinde</strong> açıklar; aksi halde, karar kendiliğinden kalkar.
+            </blockquote>
+            <div class="mt-4 p-4 bg-teal-50 border-l-4 border-teal-400 rounded">
+                <p style="text-align: justify;"><strong>🧠 Hoca Yorumu (Aynı Kural, Üçüncü Kez!):</strong> Haberleşmenin gizliliğine dokunma usulü de Madde 20 ve 21 ile **tıpatıp aynıdır**. Ana kural hâkim kararı, istisnası yetkili merciin yazılı emri ve **24/48 saat** denetim süresi. Anayasa bu üç özel alana (özel hayat, konut, haberleşme) aynı derecede önem vermiş ve aynı koruma kalkanını sağlamıştır.</p>
+            </div>
+        </div>
+    </details>
+
+</section>
+                
             </article>
         </div>
     </main>
